@@ -1,12 +1,20 @@
 #+TITLE: BNF Mode for GNU Emacs
+#+AUTHOR: Serghei Iakovlev
 
 [[https://www.gnu.org/licenses/gpl-3.0.txt][https://img.shields.io/badge/license-GPL_3-green.svg]]
 [[https://travis-ci.com/sergeyklay/bnf-mode][https://travis-ci.com/sergeyklay/bnf-mode.svg]]
 
 A GNU Emacs major mode for editing BNF grammars.
 
+#+begin_quote
+Precise language is not the problem.  Clear language is the problem.
+Richard Feynman
+#+end_quote
+
 Currently provides basic syntax and font-locking for BNF files.
-EBNF and ABNF are in my plans for the near future.
+EBNF and ABNF are in my plans for the near future.  At this time BNF Mode
+is not an absolutely accurate implementation of the standards and
+recommendations, but I'll try to be as close to them as possible.
 
 When developing this mode, the following RFCs were taken into account:
 
@@ -81,6 +89,7 @@ To see what has changed in recent versions of BNF Mode, see the [[https://github
 ** External Links
 
 - [[https://en.wikipedia.org/wiki/Backus%E2%80%93Naur_form][Wikipedia: Backus–Naur form]]
+- [[https://www.cl.cam.ac.uk/~mgk25/iso-14977.pdf][ISO/IEC 14977: EBNF]]
 - [[https://www.ics.uci.edu/~pattis/ICS-33/lectures/ebnf.pdf][EBNF: A Notation to Describe Syntax]]
 
 ** License
